# ziew

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/sample_outputs/attention_is_all_you_need_docling/: README.md  chunks.jsonl  document.md  quality_report.json
src/kbparse/: cli.py  config.py  models.py  paths.py  validation.py
src/kbparse/chunking/: builder.py  io.py
src/kbparse/enrichment/: images.py
src/kbparse/exporters/: json_exporter.py  markdown.py
src/kbparse/images/: assets.py
src/kbparse/parsers/: base.py  docling_parser.py  fake_parser.py  pymupdf_parser.py
src/kbparse/providers/: base.py  mock_provider.py  openai_compatible_provider.py
src/kbparse/quality/: report.py
tests/: conftest.py  test_atomic_chunks.py  test_chunk_builder.py  test_chunks_jsonl.py  test_cli_contract.py  test_config.py  test_docling_parser_adapter.py  test_e2e_fake_ingest.py  test_enrich_images.py  test_enrich_images_asset_resolution.py  test_evidence_units.py  test_fake_parser.py  test_import.py  test_json_exporter.py  test_markdown_exporter.py  test_mock_provider.py  test_models.py  test_openai_compatible_provider.py  test_paths.py  test_pymupdf_parser_smoke.py  test_quality_report.py  test_sample_document_factory.py  test_validation.py
tests/fixtures/: __init__.py  sample_document_factory.py
